--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>학원에서 배우는 것</title>
 </head>
 <body>
-    <div>아직 배우는 중이라 내용 없음</div>
+    <h1>HTML / CSS / JQUERY document </h1>
+    <hr>
+    <h2>HTML / CSS</h2>
     
+    <ul>
+        <li> 
+         <a href="./doc/box01.html" target="blank">box-model</a>
+         <p>첫 수업은 박스 모델에 대한 설명...</p>
+        </li>
+
+
+
+    </ul>
 </body>
 </html>
