--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <h2>layout</h2>
 
 <ul>
-    <li><a href="./all__layout01.html">기본 레이아웃 01</a>
+    <li><a href="all__layout01.html">기본 레이아웃 01</a>
         <p>
             기본 레이아웃 짜기 : 큰 틀을 만들기
         </p>
@@ -111,7 +111,7 @@
 </li>
 </ul>
 <ul>
-    <li><a href="./all__layout02.html">기본 레이아웃 02</a>
+    <li><a href="all__layout02.html">기본 레이아웃 02</a>
         <p>
             슬라이드를 이용한 메인 레이아웃 짜기
             
