--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <ol>
         <li>
-            <a href="./doc/box01.html" target="blank">box-model</a>
+            <a href="./github/doc/box01.html" target="blank">box-model</a>
             <p>첫 수업은 박스 모델에 대한 설명... <br>
                 1.박스는 화면을 꽉 채운다 <br> 2.width:auto height:auto 
             </p>
             <em>2022-03-01</em>
         </li>
         <li>
-            <a href="./doc/box02.html" target="blank">box-model02</a>
+            <a href="./github/doc/box02.html" target="blank">box-model02</a>
             <p>첫 수업은 박스 모델에 대한 설명... <br>
                 1.박스는 화면을 꽉 채운다 <br> 2.width:auto height:auto 
             </p>
@@ -37,51 +37,51 @@
         </li>
 
         <li>
-            <a href="./doc/display01.html" target="blank">display01</a>
+            <a href="./github/doc/display01.html" target="blank">display01</a>
             <p>디스플레이에 관한 설명 <br>
                 1. 디스플레이는 어떻게 보이냐에 관한 것 <br> 2. none/block/inline/inline-block </p>
             <em>2022-03-11</em>
         </li>
         <li>
-            <a href="./doc/flex01.html" target="blank">flex01</a>
+            <a href="./github/doc/flex01.html" target="blank">flex01</a>
             <p>플렉스에 관한 설명 <br>
                 1. 자료를 옆으로 배치하는 방식중 하나 </p>
             <em>2022-03-07</em>
         </li>
         <li>
-            <a href="./doc/flex02.html" target="blank">flex02</a>
+            <a href="./github/doc/flex02.html"target="blank">flex02</a>
             <p>플렉스에 관한 설명 </p>
             <em>2022-03-11</em>
         </li>
 
         <li>
-            <a href="./doc/flex01.html" target="blank">float01</a>
+            <a href="./github/doc/flex03.html" target="blank">float01</a>
             <p>float에 관한 설명 <br>
                 1. 뜬다라는 개념<br> 2. float은 left 와 right가 존재<br>float을 지워주기 위한 3단 콤보 "content=""; display=block;
                 clear:both;" </p>
             <em>2022-03-07</em>
         </li>
         <li>
-            <a href="./doc/flex01.html" target="blank">font01</a>
+            <a href="./github/doc/font01.html" target="blank">font01</a>
             <p>font에 관한 설명
                 1. noto sans kr을 애용하자 </p>
             <em>2022-03-08</em>
         </li>
 
         <li>
-            <a href="./doc/grid01.html" target="blank">grid01</a>
+            <a href="./github/doc/grid01.html" target="blank">grid01</a>
             <p>grid에 관한 설명 <br>
                 1. 자료를 옆으로 배치하는 방식중 하나 </p>
             <em>2022-03-08</em>
         </li>
         <li>
-            <a href="./doc/layout01.html" target="blank">layout01</a>
+            <a href="./github/doc/layout01.html" target="blank">layout01</a>
             <p>레이아웃에 관한 설명 
  </p>
             <em>2022-03-08</em>
         </li>
         <li>
-            <a href="./doc/layout02.html" target="blank">layout02</a>
+            <a href="./github/doc/layout02.html" target="blank">layout02</a>
             <p>레이아웃에 관한 설명 </p>
             <em>2022-03-07</em>
         </li>
@@ -91,7 +91,7 @@
             <em>2022-03-08</em>
         </li>
         <li>
-            <a href="./doc/webicon01.html" target="blank">webicon01</a>
+            <a href="./github/doc/webicon01.html" target="blank">webicon01</a>
             <p>webicon에 관한 설명
                 1. xe-icon에서 끌어올 수 있음 </p>
             <em>2022-03-08</em>
