--- a/github/index.html
+++ b/github/index.html
@@ -124,6 +124,19 @@
     </p>
     <em>2022-03-15</em>
 </li>
+<li><a href="./github/all_layout04.html">기본레이아웃 04</a>
+    <p>
+       popup(3개)
+        
+    </p>
+    <em>2022-03-16</em>
+</li><li><a href="./github/all_layout05.html">기본레이아웃 05</a>
+    <p>
+        배너 + 메뉴 색 바꾸기
+        
+    </p>
+    <em>2022-03-16</em>
+</li>
 </ul>
 
 </body>
