--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
     </p>
     <em>2022-03-16</em>
 </li>
+<li><a href="./all_layout06.html">기본레이아웃 06</a>
+    <p>
+        배너 + 슬라이드 + 메뉴 짱어려움
+    </p>
+    <em>2022-03-17</em>
+</li>
+<li><a href="./doc/before_after01.html">가상 요소 만들기</a>
+    <p>
+        before&after 의 개념 이해 
+    </p>
+    <em>2022-03-17</em>
+</li>
 </ul>
 
 </body>
