--- a/all_layout06.html
+++ b/all_layout06.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/all_layout06.css">
+    <link rel="stylesheet" href="./css/jquery.mb.YTPlayer.min.css">
 </head>
 
 
@@ -16,7 +18,7 @@
     <div class="Wrap">
 
         <!-- { topBanner : oh 2022.03.17 최종수정 -->
-        <div class="topBannner">
+        <div class="topBanner">
             <div class="container">
                 <h2>JEWELLERY COLLECTION EVENT</h2>
                 <p>
@@ -51,6 +53,16 @@
                         <input type="search" name="searchvalue" id="searchvalue" placeholder="검색어를 입력해주세요." required>
                         <button><i class="xi-search"></i></button>
                     </form>
+                    <script>
+                        const formSumit = () => {
+                            const searchVal = document.searchForm.searchvalue.value;
+                            if (searchVal.length < 5) {
+                                alert('검색어가 너무 짧습니다.');
+                                return
+                            }
+                            alert(searchVal)
+                        }
+                    </script>
                 </div>
             </div>
         </header>
@@ -64,22 +76,204 @@
                     <figure class="itm01">
                         <div class="inner">
                             <h3>01. JEWLLRY COLLECTION</h3>
-                        <p>      모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p></div>
+                            <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p>
+                        </div>
+                        <i class="xi-heart"></i>
                     </figure>
 
                     <figure class="itm02">
                         <div class="inner">
-                            <h3>01. JEWLLRY COLLECTION</h3>
-                            <p>      모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p></div>
+                            <h3>02. JEWLLRY COLLECTION</h3>
+                            <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p>
+                        </div>
+                        <i class="xi-heart"></i>
                     </figure>
 
                     <figure class="itm03">
                         <div class="inner">
-                            <h3>01. JEWLLRY COLLECTION</h3>
-                            <p>      모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p></div>
+                            <h3>03. JEWLLRY COLLECTION</h3>
+                            <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷</p>
+                        </div>
+                        <i class="xi-heart"></i>
                     </figure>
-                    
                 </div>
+            </section>
+
+            <section class="mainProduct">
+                <h2>MAIN PRODUCT</h2>
+                <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷 </p>
+                <div class="container">
+                    <figure>
+                        <div class="inner">
+                            <img src="./images/lesedilarona01.jpg" alt="">
+                        </div>
+                        <strong>스톤 그리고 색상들을 멋진 조합</strong>
+                        <a href="">구매하기</a>
+                    </figure>
+                    <figure>
+                        <div class="inner">
+                            <img src="./images/lesedilarona02.jpg" alt="">
+                        </div>
+                        <strong>스톤 그리고 색상들을 멋진 조합</strong>
+                        <a href="">다... 구매하기</a>
+                    </figure>
+                    <figure>
+                        <div class="inner">
+                            <img src="./images/lesedilarona03.jpg" alt="">
+                        </div>
+                        <strong>스톤 그리고 색상들을 멋진 조합</strong>
+                        <a href="">구매하기</a>
+                        <div class="label">
+                            <span>HIT !</span>
+                        </div>
+                    </figure>
+                </div>
+            </section>
+
+            <section class="eventBanner">
+                <h2>JEWELLERY COLLECTION</h2>
+                <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷 </p>
+                <a href="#!">more <i class="xi-arrow-right"></i></a>
+            </section>
+
+            <section class="evenetProduct">
+                <div class="container">
+                    <div class="left">
+                        <div class="eProductSlide">
+                            <figure><img src="./images/lesedilarona01.jpg" alt=""></figure>
+                            <figure><img src="./images/lesedilarona02.jpg" alt=""></figure>
+                            <figure><img src="./images/lesedilarona03.jpg" alt=""></figure>
+                            <figure><img src="./images/lesedilarona04.jpg" alt=""></figure>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="txtinner">
+                            <h3>JEWELLERY COLLECTION</h3>
+                            <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷 </p>
+                            <i class="xi-pause"></i> <i class="xi-play"></i>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="allProduct">
+                <h2>JEWELLERY COLLECTION</h2>
+                <p>모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷 </p>
+                <div class="container">
+                    <div class="aproductSlide">
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona01.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION01</strong>
+                        </figure>
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona02.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION02</strong>
+                        </figure>
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona03.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION03</strong>
+                        </figure>
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona04.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION04</strong>
+                        </figure>
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona05.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION05</strong>
+                        </figure>
+                        <figure>
+                            <div class="inner">
+                                <img src="./images/lesedilarona06.jpg" alt="">
+                            </div>
+                            <strong>JEWELLERY COLLECTION06</strong>
+                        </figure>
+                    </div>
+                    <div class="arrows">
+                        <i class="xi-arrow-right"></i>
+                        <i class="xi-arrow-left"></i>
+                    </div>
+                </div>
+
+            </section>
+            <section class="movieBg">
+                <h3>MUSIC VIDEO</h3>
+                <p>TOMBOY </p>
+                <div class="btn">
+                    <i class="xi-pause"></i>
+                    <i class="xi-play"></i>
+                </div>
+                <div id="bgndVideo" class="player"></div>
+
+
+            </section>
+            <section class="customerArea">
+                <div class="container">
+                    <div>
+                        <ul class="tabMenu">
+                            <li class="oo"><a href="#!"> News &amp; notive</a></li>
+                            <li><a href="#!">Event</a></li>
+                            <li><a href="#!">issue &amp; doc</a></li>
+                        </ul>
+                        <div class="tabContent">
+                            <div class="oo">
+                                <ul>
+                                    <li><a href="#!"><strong>  1페이지야
+                                   
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>  안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><a href="#!"><strong>   2  페이지야
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><a href="#!"><strong> 3 페이지야
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong> 안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                    <li><a href="#!"><strong>   안녕 나는 민경
+                                            </strong><span>2022.03.21</span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/mainvisual01.jpg" alt="">
+                        <a href="#!" class="button">
+                            view
+                        </a>
+                        <i class="xi-heart"></i>
+                    </div>
+                </div>
+
             </section>
 
 
@@ -89,7 +283,12 @@
 
 
 
-        <footer class="footerWrap"></footer>
+        <footer class="footerWrap">
+            <div class="footertop">
+
+            </div>
+            <div class="footerbottom"></div>
+        </footer>
 
 
 
@@ -98,6 +297,7 @@
 
 </body>
 <script src="./js/jquery-1.12.4.min.js"></script>
+<script src="./js/jquery.mb.YTPlayer.min.js"></script>
 <script src="./js/slick.min.js"></script>
 <script src="./js/all_layout06.js"></script>
 
