--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 </li>
 <li><a href="./all_layout06.html">기본레이아웃 06</a>
     <p>
-        배너 + 슬라이드 + 메뉴 짱어려움
+        배너 + 슬라이드 + 메뉴 짱어려움 +동영상 넣기
     </p>
-    <em>2022-03-17</em>
+    <em>2022-03-21</em>
 </li>
 <li><a href="./doc/before_after01.html">가상 요소 만들기</a>
     <p>
@@ -149,6 +149,7 @@
     </p>
     <em>2022-03-17</em>
 </li>
+>
 </ul>
 
 </body>
