--- a/index.html
+++ b/index.html
@@ -149,7 +149,25 @@
     </p>
     <em>2022-03-17</em>
 </li>
->
+<li><a href="./doc/sub01.html">기본으로 돌아가..</a>
+    <p>
+       flex를 이용한 배치연습(table)
+    </p>
+    <em>2022-03-23</em>
+</li>
+<li><a href="./doc/sub02.html">기본으로 돌아가..</a>
+    <p>
+       flex를 이용한 배치연습+사진
+    </p>
+    <em>2022-03-23</em>
+</li>
+<li><a href="./doc/sub03.html">기본으로 돌아가..</a>
+    <p>
+       지도를 넣어보자!
+    </p>
+    <em>2022-03-23</em>
+</li>
+
 </ul>
 
 </body>
