--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
     </p>
     <em>2022-03-21</em>
 </li>
+<li><a href="./Compose.html">COMPOSE COFFE</a>
+    <p>
+        레이아웃 06을 이용한 컴포즈 커피홈페이지 만들기
+    </p>
+    <em>2022-03-22</em>
+</li>
+
 <li><a href="./doc/before_after01.html">가상 요소 만들기</a>
     <p>
         before&after 의 개념 이해 
