--- a/Compose.html
+++ b/Compose.html
@@ -78,16 +78,16 @@
                     </figure>
                     <figure>
                         <div class="inner">
-                            <img src="./images/컴포즈/컴포즈커피-카라멜-마끼아또.jpg" alt="">
+                            <img src=".//images/컴포즈/컴포즈커피-아메리카노.jpg" alt="">
                         </div>
-                        <strong>캬라멜 마끼아또</strong>
+                        <strong>아메리카노</strong>
                         <a href="">시음하기</a>
                     </figure>
                     <figure>
                         <div class="inner">
-                            <img src="./images/컴포즈/컴포즈커피-헤이즐넛-라떼.jpg" alt="">
+                            <img src=".//images/컴포즈/컴포즈커피-아메리카노.jpg" alt="">
                         </div>
-                        <strong>헤이즐넛 라떼</strong>
+                        <strong>아메리카노</strong>
                         <a href="">시음하기</a>
 
                     </figure>
@@ -113,7 +113,8 @@
                     <div class="right">
                         <div class="txtinner">
                             <h3>SIDE MENU</h3>
-                            <p> 음료와 함께  다양한 메뉴들을 즐겨보세요.</p>
+                            <p> 컴포즈커피 인테리어는 뉴트로 감성과 실용성을 고루 갖춘 스마트한 디자인 컨셉입니다. <br>
+                                운영 능력에 적합한 기계장비 구성과 효율적인 매장 동선을 기반으로 <br> 소규모 매장에 최적화된 레이아웃을 제공합니다.</p>
                             <i class="xi-pause"></i> <i class="xi-play"></i>
                         </div>
                     </div>
