--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
 </li>
 <li><a href="./doc/sub04.html">기본으로 돌아가..</a>
     <p>
-hover
+click
     </p>
     <em>2022-03-24</em>
 </li>
 <li><a href="./doc/sub05.html">기본으로 돌아가..</a>
     <p>
-hover on&amp;off
+click
     </p>
     <em>2022-03-24</em>
 </li>
